--- a/csscheatsheet/index.html
+++ b/csscheatsheet/index.html
@@ -13,6 +13,10 @@
     <h1>Hello World</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam ullam, impedit esse, perspiciatis pariatur illum nesciunt quae accusantium sequi numquam porro doloremque non quod magni ratione ipsa quo voluptate. At.</p>
     </div>
+    <div class="box-2">
+    <h1>Hello World</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam ullam, impedit esse, perspiciatis pariatur illum nesciunt quae accusantium sequi numquam porro doloremque non quod magni ratione ipsa quo voluptate. At.</p>
+    </div>
     </div>
 </body>
 </html>
