--- a/csscheatsheet/index.html
+++ b/csscheatsheet/index.html
@@ -17,6 +17,17 @@
     <h1>Goodbye World</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam ullam, impedit esse, perspiciatis pariatur illum nesciunt quae accusantium sequi numquam porro doloremque non quod magni ratione ipsa quo voluptate. At.</p>
     </div>
+
+    <div class="categories">
+        <h2>Catergories</h2>
+        <ul>
+            <li><a href="#">Category 1</a></li>
+            <li><a href="#">Category 2</a></li>
+            <li><a href="#">Category 3</a></li>
+            <li><a href="#">Category 4</a></li>
+            <li><a href="test.html">Category 5</a></li>
+        </ul>
+    </div>
     </div>
 </body>
 </html>
