--- a/csscheatsheet/index.html
+++ b/csscheatsheet/index.html
@@ -1,33 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Cheat Sheet</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
     <div class="container">
-    <div class="box-1">
-    <h1>Hello World</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam ullam, impedit esse, perspiciatis pariatur illum nesciunt quae accusantium sequi numquam porro doloremque non quod magni ratione ipsa quo voluptate. At.</p>
-    </div>
-    <div class="box-2">
-    <h1>Goodbye World</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam ullam, impedit esse, perspiciatis pariatur illum nesciunt quae accusantium sequi numquam porro doloremque non quod magni ratione ipsa quo voluptate. At.</p>
-    </div>
+      <div class="box-1">
+        <h1>Hello World</h1>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam
+          ullam, impedit esse, perspiciatis pariatur illum nesciunt quae
+          accusantium sequi numquam porro doloremque non quod magni ratione ipsa
+          quo voluptate. At.
+        </p>
+      </div>
+      <div class="box-2">
+        <h1>Goodbye World</h1>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam
+          ullam, impedit esse, perspiciatis pariatur illum nesciunt quae
+          accusantium sequi numquam porro doloremque non quod magni ratione ipsa
+          quo voluptate. At.
+        </p>
+        <a class="button" href="">Read More</a>
+      </div>
 
-    <div class="categories">
+      <div class="categories">
         <h2>Catergories</h2>
         <ul>
-            <li><a href="#">Category 1</a></li>
-            <li><a href="#">Category 2</a></li>
-            <li><a href="#">Category 3</a></li>
-            <li><a href="#">Category 4</a></li>
-            <li><a href="test.html">Category 5</a></li>
+          <li><a href="#">Category 1</a></li>
+          <li><a href="#">Category 2</a></li>
+          <li><a href="#">Category 3</a></li>
+          <li><a href="#">Category 4</a></li>
+          <li><a href="test.html">Category 5</a></li>
         </ul>
+      </div>
+
+      <form class="my-form">
+        <div class="form-group">
+          <label for="name">Name:</label>
+          <input type="text" name="name" />
+        </div>
+        <div class="form-group">
+          <label for="email">Email:</label>
+          <input type="text" name="email" />
+        </div>
+        <div class="form-group">
+          <label for="message">Message:</label>
+          <textarea name="message" id="" cols="30" rows="2"></textarea>
+        </div>
+        <input class="button" type="submit" value="submit" />
+      </form>
     </div>
-    </div>
-</body>
+    <!-- ./container -->
+  </body>
 </html>
