alignment and floating

--- a/csscheatsheet/index.html
+++ b/csscheatsheet/index.html
@@ -55,6 +55,55 @@
         </div>
         <input class="button" type="submit" value="submit" />
       </form>
+
+      <div class="block">
+        <h3>Heading</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem animi
+          harum ipsa architecto unde corporis expedita, nihil nemo facilis
+          dignissimos id eum assumenda nobis? Blanditiis quo unde ratione ea
+          minima.
+        </p>
+      </div>
+      <div class="block">
+        <h3>Heading</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem animi
+          harum ipsa architecto unde corporis expedita, nihil nemo facilis
+          dignissimos id eum assumenda nobis? Blanditiis quo unde ratione ea
+          minima.
+        </p>
+      </div>
+      <div class="block">
+        <h3>Heading</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem animi
+          harum ipsa architecto unde corporis expedita, nihil nemo facilis
+          dignissimos id eum assumenda nobis? Blanditiis quo unde ratione ea
+          minima.
+        </p>
+      </div>
+
+      <div class="clr"></div>
+
+      <div id="main-block">
+        <h3>Heading</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem animi
+          harum ipsa architecto unde corporis expedita, nihil nemo facilis
+          dignissimos id eum assumenda nobis? Blanditiis quo unde ratione ea
+          minima.
+        </p>
+      </div>
+
+      <div id="side-bar">
+         <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem animi
+          harum ipsa architecto unde corporis expedita, nihil nemo facilis
+          dignissimos id eum assumenda nobis? Blanditiis quo unde ratione ea
+          minima.
+        </p>
+      </div>
     </div>
     <!-- ./container -->
   </body>
