--- a/csscheatsheet/index.html
+++ b/csscheatsheet/index.html
@@ -104,7 +104,31 @@
           minima.
         </p>
       </div>
+
+      <div class="clr"></div>
+
+      <div class="p-box">
+        <h1>Hello</h1>
+        <h2>Goodbye</h2>
+      </div>
+
+      <ul class="my-list">
+        <li>List Item</li>
+        <li>List Item</li>
+        <li>List Item</li>
+        <li>List Item</li>
+        <li>List Item</li>
+        <li>List Item</li>
+        <li>List Item</li>
+        <li>List Item</li>
+        <li>List Item</li>
+        <li>List Item</li>
+        <li>List Item</li>
+        <li>List Item</li>
+      </ul>
     </div>
     <!-- ./container -->
+
+    <a class="fix-me button" href="">Hello</a>
   </body>
 </html>
