completed html and css website

--- a/mywebsite/index.html
+++ b/mywebsite/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Website</title>
-    <link rel="stylesheet" href="CSS/style.css" />
+    <link rel="stylesheet" href="CSS/styles.css" />
   </head>
   <body>
     <header id="main-header">
@@ -28,35 +28,34 @@
     <section id="showcase">
       <div class="container">
         <h1>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil labore
-          sequi exercitationem debitis optio inventore, voluptatibus
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident vel
+          deserunt amet mollitia aut velit,
         </h1>
       </div>
     </section>
 
-    <div id="container">
+    <div class="container">
       <section id="main">
         <h1>Welcome</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae optio
-          facilis magni unde adipisci sint. Rem, velit vel sed distinctio
-          pariatur ad repellendus labore voluptate necessitatibus neque modi
-          voluptatibus iure.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta,
+          excepturi aperiam eligendi exercitationem placeat, esse ut, fugiat
+          recusandae eius vero unde ducimus a cum dolor iusto modi aliquam optio
+          possimus.
         </p>
       </section>
-
       <aside id="sidebar">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis,
-        maxime magni? Excepturi quis reprehenderit quae provident repellat,
-        expedita optio eum voluptatem odit dignissimos maxime perspiciatis culpa
-        sed nemo? Ex, consectetur.
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt earum
+          facere odio nihil facilis rerum. Quibusdam suscipit placeat voluptates
+          commodi modi tempora, nulla enim quod tempore quasi libero officia
+          nobis!
+        </p>
       </aside>
     </div>
 
     <footer id="main-footer">
-      <p>Copyright &copy; 2022 My Website</p>
+        <p>Copyright &copy; 2022 My Website </p>
     </footer>
   </body>
 </html>
-
-<!-- creating this comments to see if it publishes on github pls ignore -->
